--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@ body{
 }
 
 
-#home, #project, #about, #contact{
+#home, #project, #about, #contact, #contact-form{
     text-align: center;
 }
 
@@ -102,7 +102,7 @@ nav{
     padding: 20px 0;
 }
 
-p, h3, button, li, nav{
+p, h3, button, li, nav, label{
     font-family: 'Roboto', sans-serif;
 }
 
@@ -134,6 +134,26 @@ i, #footer{
 
 i{
     padding: 0px 20px;
+}
+
+#contact-form{
+    padding-top: 8vh;
+}
+
+#form{
+    padding: 10vh 0;
+}
+
+.cover{
+    background-image: url(single-palm-tree.jpg);
+}
+
+label{
+    padding: 20px;
+}
+
+input{
+    padding:7px;
 }
 
 @media screen and (max-width: 768px){
