--- a/main.css
+++ b/main.css
@@ -17,14 +17,16 @@ body{
 }
 
 #home{
-    padding: 20% 0;
     background-image: url(palm-trees.jpg);
     background-color: #d7dae5;
     background-position:center;
     background-repeat: no-repeat;
-    height:300px;
+    height:100%;
     background-size: cover;
+    margin-top: 8vh;
+    padding: 20vh 0;
 }
+
 
 nav{
     display: flex;
@@ -59,7 +61,9 @@ nav{
 }
 
 .nav-links a:hover{
-    color:black;
+    color: #b8b08d;
+    font-weight: bold;
+
 }
 
 .menu{
