--- a/main.css
+++ b/main.css
@@ -225,7 +225,7 @@ p, button, li, nav, label, h3{
 }
 
 h1, h2, h4{
-    font-family: 'Libre Caslon Display', sans-serif;
+    font-family: 'Libre Caslon Text', sans-serif;
 }
 
 
