--- a/main.css
+++ b/main.css
@@ -23,7 +23,7 @@ body{
     opacity: 0;
 }
 
-#home, #project, #contact, .heading, .greenline{
+#home, #project, #contact, .heading, .greenline, #image, #palmimage{
     text-align: center;
 }
 
@@ -45,11 +45,11 @@ body{
 
 
 /*WORKING HERE RIGHT NOW*/
-#about-section{
+#about-section, #contact-section{
     margin: 10vh 0;
 }
 
-#about{
+#about, #contact{
     margin-right: 15vh;
     padding:20px;
     text-align: justify;
@@ -60,8 +60,11 @@ body{
     width:auto;
 }
 
-#image{
-    text-align: center;
+#palm{
+    height:30vh;
+    width:auto;
+    border-radius: 100%;
+    text-align:center;
 }
 
 
@@ -87,17 +90,6 @@ body{
     padding: 10px;
 }
 
-.beach{
-    background-image: url(palm-trees2.jpg);
-    background-color: #8BB380;
-    background-position:center;
-    background-repeat: no-repeat;
-    height: 50vh;
-    background-size: cover;
-    margin-top: 8vh;
-    padding-bottom: 20vh;
-    box-shadow: 25px 10px #454851;
-}
 
 .project{
     text-align: center;
@@ -107,24 +99,23 @@ body{
     justify-content: center;
 }
 
-.testing{
+.palmtree-bg{
     background-image: url(palm-trees.jpg);
     background-color: #d7dae5;
     background-position:center;
     background-repeat: no-repeat;
-    height: 80vh;
+    height: 95vh;
     background-size: cover;
-    margin-top: 8vh;
-    padding: 20vh 0;
-    box-shadow: 25px 10px #8BB380;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 56%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
 }
 
-.test{
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+.content{
+    margin:0 auto;
+    text-align:center;
+    padding: 30vh 0;
 }
+
 
 .btn2, .project-btn, .filter-btn{
     background-color: #8BB380;
@@ -136,6 +127,15 @@ body{
     text-decoration: none;
 }
 
+.section-btn{
+    background-color: #8BB380;
+    padding: 10px 30px;
+    width: 275px;
+    border: none;
+    border-radius: 30px;
+    color:white;
+    text-decoration: none;  
+}
 
 .code-project{
     padding:50px 0px;
@@ -187,17 +187,9 @@ h1{
     padding-bottom: 20px;
 }
 
-#home{
-    background-image: url(palm-trees.jpg);
-    background-color: #d7dae5;
-    background-position:center;
-    background-repeat: no-repeat;
-    height:100%;
-    background-size: cover;
-    margin-top: 8vh;
-    padding: 20vh 0;
+.spacing-top{
+    padding-top: 20px;
 }
-
 
 nav{
     display: flex;
@@ -205,7 +197,7 @@ nav{
     align-items: center;
     min-height: 8vh;
     background-color: #f9f9f9;
-    opacity: 75%;
+    opacity: 85%;
     position: fixed;
     top:0;
     width:100%;
@@ -311,9 +303,14 @@ button:hover, .filter-btn:hover, .active-btn{
     text-align: center;
 }
 
+#envelope{
+    color: #8BB380;
+}
+
 i, #footer{
     color: white;
 }
+
 
 i{
     padding: 0px 20px;
@@ -425,13 +422,6 @@ input[type=text], input[type=email], textarea{
         flex: 100%
     }
 
-    .column-home{
-        flex:25%
-    }
-
-    .column-home2{
-        flex:75%;
-    }
 
     .right-side{
         margin: 0 15vh;
@@ -450,11 +440,6 @@ input[type=text], input[type=email], textarea{
         display: inline-block;
     }
 
-    #about{
-        margin: 5vh;
-        padding:20px;
-        text-align: justify;
-    }
 
     h1{
         font-size: 30px;
