--- a/main.css
+++ b/main.css
@@ -334,6 +334,16 @@ i{
     align-items: center;
 }
 
+#email{
+    text-decoration: none;
+    color: #8BB380;
+    font-weight: bold;
+}
+
+.bold{
+    font-weight: bold;
+}
+
 @media screen and (max-width: 768px){
     /*body{
         overflow: hidden;
