--- a/main.css
+++ b/main.css
@@ -86,6 +86,7 @@ body{
     border-radius: 30px;
     color:white;
     text-decoration: none;
+    margin: 5px;
 }
 
 .section-btn{
@@ -110,11 +111,16 @@ body{
     border-radius: 30px;
     color:white;
     text-decoration: none;
-    margin: 0 10px;
+    margin: 5px;
+    display: inline-block;
 }
 
 .link-div{
-    padding:30px 0;
+    margin:30px 0;
+}
+
+.spacing{
+    margin-right: 30px;
 }
 
 h1{
@@ -128,7 +134,7 @@ nav{
     align-items: center;
     min-height: 8vh;
     background-color: #f9f9f9;
-    opacity: 85%;
+    opacity: 100%;
     position: fixed;
     top:0;
     width:100%;
@@ -162,6 +168,7 @@ nav{
     font-weight: bold;
 
 }
+
 
 .menu{
     display: none;
@@ -284,10 +291,9 @@ h1, h2, .logo{
 
 /* Screen Sizes */
 @media screen and (max-width: 768px){
-    /*body{
+    body{
         overflow: hidden;
-    }*/
-
+    }
 
     .nav-links{
         position: absolute;
@@ -298,7 +304,7 @@ h1, h2, .logo{
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: 50%;
+        width: 100%;
         transform: translateX(100%);  
     }
     .nav-links li{
@@ -342,6 +348,12 @@ h1, h2, .logo{
         font-size: 30px;
     }
 
+
+}
+
+
+.nav-active{
+    transform: translateX(0%);
 }
 
 @media screen and (min-width: 768px){
