--- a/main.css
+++ b/main.css
@@ -291,16 +291,13 @@ h1, h2, .logo{
 
 /* Screen Sizes */
 @media screen and (max-width: 768px){
-    body{
-        overflow: hidden;
-    }
 
     .nav-links{
         position: absolute;
         right: 0px;
         height: 92vh;
         top: 8vh;
-        background-color: #d7dae5;
+        background-color: #f9f9f9;
         display: flex;
         flex-direction: column;
         align-items: center;
