update for mobile view

--- a/main.css
+++ b/main.css
@@ -33,7 +33,7 @@ html{
 
 #hero{
     height:95vh;
-    background-image: url(birds.JPG);
+    background-image: url(birds.jpg);
     background-position:center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -42,7 +42,7 @@ html{
 .content{
     margin:0 10px;
     text-align:center;
-    padding: 30vh 10vh;
+    padding: 20vh 10vh;
     background-color: rgba(27, 25, 25, 0.3);
 }
 
@@ -79,6 +79,6 @@ h1, .logo{
 /* Screen Sizes */
 @media screen and (max-width: 768px){
     h1{
-        font-size: 30px;
+        font-size: 20px;
     }
 }
